k8s/base/ingress.yaml
# k8s/base/ingress.yaml

# Expose uniquement l'application elle-même

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planifio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: ["planifio.ssylla.com"]
      secretName: planifio-tls
  rules:
    - host: planifio.ssylla.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planifio
                port:
                  number: 8080
